Altered size of buttons

--- a/src/csc640project/InteractiveRecordMode.form
+++ b/src/csc640project/InteractiveRecordMode.form
@@ -52,22 +52,16 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="DeleteMemberButton" min="-2" pref="103" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="DeleteProviderButton" min="-2" pref="107" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="InsertMemberButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="InsertProviderButton" min="-2" pref="107" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="UpdateMemberButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="UpdateProviderButton" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="DeleteMemberButton" max="32767" attributes="0"/>
+                      <Component id="UpdateMemberButton" max="32767" attributes="0"/>
+                      <Component id="InsertMemberButton" max="32767" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="InsertProviderButton" max="32767" attributes="0"/>
+                      <Component id="UpdateProviderButton" max="32767" attributes="0"/>
+                      <Component id="DeleteProviderButton" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="23" max="32767" attributes="0"/>
               </Group>
@@ -76,10 +70,10 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="InsertMemberButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="InsertProviderButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="InsertProviderButton" pref="35" max="32767" attributes="0"/>
+                      <Component id="InsertMemberButton" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -99,6 +93,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="InsertMemberButton">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="10" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Insert Member"/>
           </Properties>
           <Events>
@@ -107,6 +104,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="InsertProviderButton">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="10" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Insert Provider"/>
           </Properties>
           <Events>
