Added a few comments

--- a/src/csc640project/InsertMemberGUI.form
+++ b/src/csc640project/InsertMemberGUI.form
@@ -85,15 +85,15 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
-                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          <Component id="YearLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="YearChoice" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                          <Component id="MonthLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="MonthChoice" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                          <Component id="DayLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="DayChoice" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -127,13 +127,13 @@
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="DOBLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="YearLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="YearChoice" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              <Component id="MonthLabel" min="-2" max="-2" attributes="0"/>
                               <Component id="MonthChoice" min="-2" max="-2" attributes="0"/>
                               <Component id="DayChoice" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel3" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="DayLabel" alignment="1" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -231,14 +231,14 @@
             <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="YearChoiceItemStateChanged"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="YearLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="yyyy"/>
+            <Property name="text" type="java.lang.String" value="year"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel2">
+        <Component class="javax.swing.JLabel" name="MonthLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="MM"/>
+            <Property name="text" type="java.lang.String" value="Month"/>
           </Properties>
         </Component>
         <Component class="java.awt.Choice" name="MonthChoice">
@@ -246,9 +246,9 @@
             <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="MonthChoiceItemStateChanged"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel3">
+        <Component class="javax.swing.JLabel" name="DayLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="dd"/>
+            <Property name="text" type="java.lang.String" value="Day"/>
           </Properties>
         </Component>
         <Component class="java.awt.Choice" name="DayChoice">
