--- a/src/csc640project/MainGUIInterface.form
+++ b/src/csc640project/MainGUIInterface.form
@@ -181,6 +181,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Check-In"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Check_In_ButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="Login_Button">
           <Properties>
